# PresiboFlow

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: release.yml
api/: index.py  main.py
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md  getting-started.md  installation-guide.md
examples/: consultation_listener.py
frontend/: canvas.html  flow-ai.html  index.html
presiboflow/: desktop_entry.py  main.py
presiboflow/agents/: base_agent.py  clinical_agent.py  instruction_engine.py  ops_agent.py  triage_agent.py
presiboflow/config/: settings.py
presiboflow/core/: livekit_worker.py  pipeline.py  transcript_processor.py
presiboflow/graph/: state.py  workflows.py
presiboflow/prompts/: clinical_prompt.txt  molder_prompt.txt  ops_prompt.txt  triage_prompt.txt
presiboflow/tools/: calendar_tool.py  docs_tool.py  metrics_tool.py  notes_tool.py
